# Methane_TDLAS

./: .gitignore  .gitmodules  README.md
CONTROL AND MANAGEMENT APPLICATION/: README.md
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-08_20-23-57/: metadata.yaml  tdlas_data_bag_2025-07-08_20-23-57_0.db3
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-08_20-28-45/: metadata.yaml  tdlas_data_bag_2025-07-08_20-28-45_0.db3
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-09_10-08-34/: metadata.yaml
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-09_10-11-24/: metadata.yaml
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-09_10-11-43/: metadata.yaml
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-09_10-17-10/: metadata.yaml
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-09_10-34-49/: metadata.yaml
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-09_10-37-30/: metadata.yaml
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-10_20-04-31/: metadata.yaml  tdlas_data_bag_2025-07-10_20-04-31_0.db3
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-10_20-12-30/: metadata.yaml  tdlas_data_bag_2025-07-10_20-12-30_0.db3
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-14_10-27-00/: metadata.yaml  tdlas_data_bag_2025-07-14_10-27-00_0.db3
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-15_18-00-28/: metadata.yaml  tdlas_data_bag_2025-07-15_18-00-28_0.db3
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-15_18-19-44/: metadata.yaml  tdlas_data_bag_2025-07-15_18-19-44_0.db3
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-15_18-46-28/: metadata.yaml  tdlas_data_bag_2025-07-15_18-46-28_0.db3
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/experiments/tdlas_data_bag_2025-07-15_18-55-43/: metadata.yaml  tdlas_data_bag_2025-07-15_18-55-43_0.db3
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/log/: latest_build
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/src/methane_scan/: .coverage  .coverage.aromsan-GF63-Thin-10SCXR.6385.XCtTUMwx  .coveragerc  package.xml  pytest.ini  setup.cfg  setup.py
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/src/methane_scan/launch/: launch.py  mqtt_parameters.yaml  parameters.yaml
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/src/methane_scan/methane_scan/: __init__.py  methane_scan_node.py  mqtt_ros_bridge_node.py  qresources.qrc  qresources_rc.py
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/src/methane_scan/methane_scan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
CONTROL AND MANAGEMENT APPLICATION/methane_scan_ui_ws/src/methane_scan/test/: conftest.py  test_copyright.py  (+10 more)
DETECTION/VimbaX_2025-2/api/dotnet/: README.md
DETECTION/VimbaX_2025-2/api/lib/: VmbC.xml
DETECTION/detection_ws/: README.md
DETECTION/detection_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
DETECTION/detection_ws/log/: latest_build
DETECTION/detection_ws/src/marker_detector/: package.xml  setup.py
HUNTER/Methane_ws/src/MQTT_adapter/: CMakeLists.txt  package.xml
HUNTER/Methane_ws/src/motion/: CMakeLists.txt  package.xml
HUNTER/Methane_ws/src/verificacion_ptu/: CMakeLists.txt  package.xml
HUNTER/Methane_ws/src/xsens_ros2/: setup.cfg  setup.py
HUNTER/arm_interbotix_ws/src/interbotix_methane_pkg/: CMakeLists.txt
HUNTER/arm_interbotix_ws/src/interbotix_methane_pkg/include/interbotix_obstacles_pkg/: move_arm.hpp  scanner_ptu.hpp  scanner_ptu_2.hpp
HUNTER/arm_interbotix_ws/src/interbotix_methane_pkg/src/: map_obstacles.cpp  move_arm.cpp  scanner_ptu_3D.cpp
HUNTER/hunter_ws/src/hunter_launch_files/: package.xml
HUNTER/hunter_ws/src/hunter_navigation/: CMakeLists.txt  package.xml
Methane_ws/src/MQTT_adapter/src/: adaptador.cpp
Methane_ws/src/motion/launch/: hunter_motion_launch.py
Methane_ws/src/verificacion_ptu/launch/: launch.py
Methane_ws/src/verificacion_ptu/src/: comandos_velocidad.cpp
Methane_ws/src/xsens_ros2/params/: xsens_params.yaml
TRACKING/Methane/driver_TDLAS/src/olfaction/minirae_lite/: CMakeLists.txt
TRACKING/Methane/driver_TDLAS/src/olfaction/minirae_lite/resources/: 90-minirae_lite.rules  install_udev.py
TRACKING/Methane/driver_TDLAS/src/olfaction/minirae_lite/src/: identifier.cpp  minirae_lite_node.cpp
TRACKING/graficas/src/estudio_error/: package.xml  setup.cfg  setup.py
TRACKING/percepcion/src/: CMakeLists.txt  package.xml
TRACKING/percepcion/src/config/: params.yaml
TRACKING/percepcion/src/include/percepcion/: detector_aruco.hpp  mov_PTU.hpp  simulacion_movimiento.hpp
TRACKING/percepcion/src/launch/: mov_ptu_launch.py
TRACKING/percepcion/src/src/: detector_aruco.cpp  medir_retraso.cpp  mov_PTU.cpp  simulacion_movimiento.cpp
arm_interbotix_ws/src/interbotix_methane_pkg/: package.xml
arm_interbotix_ws/src/interbotix_methane_pkg/src/: methane_visualizer.cpp  scanner_ptu.cpp  scanner_ptu_2.cpp
hunter_ws/: 10.5.5-metadata.json
hunter_ws/src/hunter_description/: CMakeLists.txt  package.xml
hunter_ws/src/hunter_description/description/: robot_core.xacro
hunter_ws/src/hunter_description/launch/: hunter_description_launch.py
hunter_ws/src/hunter_launch_files/: CMakeLists.txt
hunter_ws/src/hunter_navigation/config/: navigation_params.yaml  poses_params.yaml
hunter_ws/src/hunter_navigation/src/: navigation_through_poses.cpp
(+167 files in other folders)
